Hide scrollbars in test env to prevent Argos flakiness

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,8 +13,12 @@
  *= require in_place_editing
 */
 
-body:not(.landing) { padding-top: 70px; }
-body.landing { padding-top: 20px; }
+body:not(.landing) {
+  padding-top: 70px;
+}
+body.landing {
+  padding-top: 20px;
+}
 
 .navbar-left .select2-container {
   width: 270px;
@@ -39,4 +43,10 @@ i.fa.subtle:hover {
 }
 .popover {
   overflow: hidden;
+}
+
+body.rails-env-test {
+  ::-webkit-scrollbar {
+    display: none;
+  }
 }
